🐛 fix collapsing objects

--- a/res/style/pages/products.css
+++ b/res/style/pages/products.css
@@ -32,7 +32,7 @@ main h3 {
 .panel {
   padding: 0 18px;
   background-color: white;
-  display: none;
+  /* display: none; */
   overflow: hidden;
   margin-bottom: -20vh;
 }
@@ -126,5 +126,16 @@ main h3 {
     margin-left: 0;
     margin-right: 0;
     margin: auto;
+  }
+  .entry {
+    margin-left: 0;
+    width: 100%;
+  }
+  .panel {
+    padding: 0;
+    margin: 0 1rem;
+  }
+  .slide {
+    width: 90%;
   }
 }
